syntax = "proto3";

package simple.v1;

option go_package = "github.com/protomcp/protomcp/proto/examples/simple/v1;v1";

// SimpleMessage has no associated service
message SimpleMessage {
  string id = 1;
  int32 value = 2;
}
